--- a/layouts/millennium_r4_sidebar.html
+++ b/layouts/millennium_r4_sidebar.html
@@ -16,6 +16,12 @@
         </ul>
       </li>
       <li class="js-topic">
+        <h3><a href="#" class="js-expand-btn collapsed arrow-btn" data-proofer-ignore></a><a href="/millennium/r4/coverages/">Coverages</a></h3>
+        <ul class="js-guides">
+          <li><a href="/millennium/r4/coverages/coverage/">Coverage</a></li>
+        </ul>
+      </li>
+      <li class="js-topic">
         <h3><a href="#" class="js-expand-btn collapsed arrow-btn" data-proofer-ignore></a><a href="/millennium/r4/individuals/">Individuals</a></h3>
         <ul class="js-guides">
           <li><a href="/millennium/r4/individuals/patient/">Patient</a></li>
